# surrogate_optimization_plane

./: README.md  pyproject.toml
notebooks/: 01_prepare_data.py.ipynb  02_train_model.ipynb  03_optimize.ipynb  04_pyomo_simple_example.ipynb  auto-thermal-reformer-relu.ipynb
