[tool.poetry]
name = "hybrid-models-article"
version = "0.1.0"
description = ""
authors = ["philippe.stepniewski <philippe.stepniewski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tensorflow-macos = "^2.16.2"
tensorflow-metal = "^1.1.0"
keras = "^3.6.0"
matplotlib = "^3.9.2"
jupyter = "^1.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
omlt = "^1.2.0"
pyomo = "^6.8.0"
pyarrow = "^18.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
